--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @pets.each do |pet| %>
     <li>
-      <%= pet.name %>
+      <%= link_to pet.name, pet_path(pet) %>
     </li>
   <% end %>
 </ul>
