add found_days_ago method and constant SPECIES

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -2,6 +2,7 @@
 <h2>(<%= @pet.species %>)</h2>
 <h3>location: <%= @pet.address %></h3>
 <h3>when: <%= @pet.found_on %></h3>
+<h3><%= @pet.found_days_ago %></h3>
 
 <br>
 <hr>
